# ocultar

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: languages-config.yml  main.py
desktop/: .gitignore  README.md  api.spec  bun.lockb  index.html  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
desktop/src/: styles.css
desktop/src-python/: pyinstaller.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: README.md  bun.lockb  package.json
docs/.vitepress/: config.ts
frontend/: Dockerfile  README.md  bun.lockb  index.html  package.json  postcss.config.cjs  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.ts
